--- a/estilo.css
+++ b/estilo.css
@@ -5,21 +5,31 @@
 }
 
 .cabecera{
-    background-color: cadetblue;
+    background-color: white;
     padding: 15px 0;
     display: flex;
-    justify-content: space-around;  
+    justify-content: space-around;
+    align-items: center;
+    
 }
 
 .primerTitulo{
     font-size: 25px;
     font-family: 'Secular One', sans-serif;
-    
+
 }
 
-.navegacion{
+.navegacion a{
     font-size: 15px;
-    margin-top: 8px; 
+    font-family: 'Secular One', sans-serif;
+    color: black;
+    text-decoration: none;
+    margin-left: 20px;
+}
+
+.contenedorIconos i{
+    margin-right: 12px;
+    color:#4D555A
 }
 
 .introduccion{
