--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Secular+One&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Nunito+Sans:wght@200&family=Nunito:wght@600&family=Secular+One&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -34,13 +35,71 @@
 
 .introduccion{
 
-    background-color: slateblue;
+    background-color:deepskyblue;
     padding: 190px 0;
+    display: flex;
+    align-items: top;
+    margin: 0 auto;
+    
+}
+
+
+.textoIntroduccion{
+    
+}
+
+.textoIntroduccion h2{
+    font-size: 40px;
+    font-family: 'Nunito Sans', sans-serif;
+   
+}
+.textoIntroduccion h1{
+    font-size: 100px;
+    font-family: 'Secular One', sans-serif;
+
+}
+.textoIntroduccion p{
+    font-size: 25px;
+    
+}
+
+.miImagen{    
+     
+     
+}
+
+.miImagen img{
+    width: 25%;
+    border-radius: 50%;
+    padding: 11px;
+    background-color: aliceblue;
+    
+}
+
+.botonIntro{
+    width: 210px;
+    height: 55px;
+    font-size: 20px;
+    color: white;
+    background-color: black;
+    margin-top: 20px;
 }
 
 .aboutMe{
     background-color: cornsilk;
     padding: 60px 0;
+   
+    
+}
+.aboutMeTitulo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.textoAboutMe{
+   display: flex;
+   flex-direction: column;
 }
 
 .whatIDo{
