--- a/estilo.css
+++ b/estilo.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Barlow:wght@300&family=Nunito+Sans:wght@200&family=Nunito:wght@600&family=Roboto:wght@700&family=Secular+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Barlow:wght@300&family=Nunito+Sans:wght@200&family=Nunito:wght@600&family=Poppins&family=Roboto:wght@700&family=Secular+One&display=swap');
 *{
     margin: 0;
     padding: 0;
 }
 /* INICIO CABECERA */
 .cabecera{
-    background-color: white;
+    background-color:  #faffff;
     padding: 15px 0;
     display: flex;
     justify-content: space-around;
@@ -32,44 +32,43 @@
     color:#4D555A
 }
 /*FIN CABECERA */
-.introduccion{
+.hero{
 
     background-color:deepskyblue;
-    padding: 190px 0;
+    padding-top: 190px;
+    padding-bottom: 190px;
     display: flex;
-    align-items: top;
+    align-items: center;
     
     
 }
 
 
-.textoIntroduccion{
-    margin-left: auto;
+.textoHero{
+    padding-left: 350px;
     
 }
 
-.textoIntroduccion h2{
+.textoHero h2{
     font-size: 40px;
     font-family: 'Nunito Sans', sans-serif;
    
 }
-.textoIntroduccion h1{
+.textoHero h1{
     font-size: 75px;
     font-family: 'Secular One', sans-serif;
 
 }
-.textoIntroduccion p{
+.textoHero p{
     font-size: 30px;
     
 }
-
-.miImagen{    
-   
-     
+.miImagen{
+    padding-left: 150px;
 }
 
 .miImagen img{
-    width: 30%;
+    width: 50%;
     border-radius: 50%;
     padding: 11px;
     background-color: aliceblue;
@@ -86,7 +85,7 @@
 }
 
 .aboutMe{
-    background-color: white;
+    background-color: #faffff;
     padding: 60px 0;
     
 }
@@ -100,25 +99,25 @@
 
 .aboutMeTitulo p{
     background-color: deepskyblue;
-    font-size: 20px;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .aboutMeTitulo h1{
-    font-size: 45px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .textoAboutMe{
-   display: flex;
-   flex-direction: column;
    font-size: 25px;
+  
    
 }
 
 .textoAboutMe h1{
     font-size: 40px;
     color: #212529;
-    font-family: 'Barlow', sans-serif; 
+    font-family: 'Poppins', sans-serif;
 }
 .nombreAboutMe{
     font-size: 40px;
@@ -132,10 +131,8 @@
 }
 
 .logoExperiencia{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-right: 50px;
+  
+   
     
 }
 
@@ -167,17 +164,49 @@
     font-size: 24px;
     font-family: 'Roboto', sans-serif;
 }
-.whatIDo{
-    background-color: darkkhaki;
+.quePuedoHacer{
+    background-color: #faffff;
     padding: 200px 0;
+    
+}
+.quePuedoHacerTitulo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.parrafoQuepuedoHacer{
+    font-size: 16px;
+    margin-bottom: 15px;
+    font-family: 'Poppins', sans-serif;
+    background-color: deepskyblue;
+}
+
+.h1QuePuedoHacer{
+    font-size: 35px;
+    font-family: 'Poppins', sans-serif;
+}
+
+
+
+.contenedorIconosYtexto{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 70px;
+   
 }
 
 .contenedorIconosYtexto img{
     width: 90px;
-    color: deepskyblue;
-    
-    
-   
+}
+
+.uno, .dos, .tres, .cuatro, .cinco, .seis{
+    text-align: center;
+    width: 400px;
+    padding: 40px;
+    height: 250px;
 }
 
 .resume{
