--- a/estilo.css
+++ b/estilo.css
@@ -260,7 +260,7 @@
 }
 
 .educacion, .experienciaResume{
-    width: 450px;
+    width: 600px;
     padding-top: 100px;
     padding-left: 80px;
     margin-left: 50px;
@@ -274,6 +274,148 @@
 .bordeExperiencia{
     border-left: solid 3px deepskyblue;
     padding-left: 13px;  
+}
+
+.skills{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+}
+.h1skills{
+    display: flex;
+    justify-content: center;
+    width: 700px;
+    text-align: center;
+    padding-left: 95px;
+    padding-top: 70px; 
+}
+.skillPorcentaje{
+   display: flex;
+   justify-content: space-between;
+}
+.contenedor{
+    width: 600px; 
+    padding-left: 100px;
+    padding-top: 25px; 
+}
+.barra1{
+    width: 390px;
+    height: 10px;
+    background-color:  rgba(0, 191, 255, 0.88);
+    border-radius: 100px;
+}
+
+.contenedorBarra1{
+    width: 600px;
+    height: 10px;
+    background-color: darkgray;
+    border-radius: 100px;
+    margin-top: 12px;
+    
+}
+
+.barra2{
+    width: 420px;
+    height: 10px;
+    background-color:  rgba(0, 191, 255, 0.88);
+    border-radius: 100px;
+}
+
+.contenedorBarra2{
+    width: 600px;
+    height: 10px;
+    background-color: darkgray;
+    border-radius: 100px;
+    margin-top: 12px;
+    
+}
+
+.barra3{
+    width: 570px;
+    height: 10px;
+    background-color:  rgba(0, 191, 255, 0.88);
+    border-radius: 100px;
+}
+
+.contenedorBarra3{
+    width: 600px;
+    height: 10px;
+    background-color: darkgray;
+    border-radius: 100px;
+    margin-top: 12px;
+    
+}
+
+.barra4{
+    width: 360px;
+    height: 10px;
+    background-color:  rgba(0, 191, 255, 0.88);
+    border-radius: 100px;
+}
+
+.contenedorBarra4{
+    width: 600px;
+    height: 10px;
+    background-color: darkgray;
+    border-radius: 100px;
+    margin-top: 12px;
+    
+}
+
+.barra5{
+    width: 480px;
+    height: 10px;
+    background-color:  rgba(0, 191, 255, 0.88);
+    border-radius: 100px;
+}
+
+.contenedorBarra5{
+    width: 600px;
+    height: 10px;
+    background-color: darkgray;
+    border-radius: 100px;
+    margin-top: 12px;
+    
+}
+
+.barra6{
+    width: 594px;
+    height: 10px;
+    background-color: rgba(0, 191, 255, 0.88);
+    border-radius: 100px;
+}
+
+.contenedorBarra6{
+    width: 600px;
+    height: 10px;
+    background-color: darkgray;
+    border-radius: 100px;
+    margin-top: 12px;
+    
+}
+
+.contenedorBotonDescargarCV{
+   display: flex;
+   justify-content: center;
+   margin-top: 80px;
+}
+
+.botonDescargarCV{
+    width: 190px;
+    height: 50px;
+    background-color: #faffff;
+    font-family: 'Poppins', sans-serif;
+    border: solid black 2px;
+    cursor: pointer;
+    transition: .5;
+}
+
+
+.botonDescargarCV:hover{
+    background-color: rgba(0, 191, 255, 0.88);
+    transition: .5s;
+    color: #faffff;
 }
 
 .portfolio{
