--- a/estilo.css
+++ b/estilo.css
@@ -420,7 +420,7 @@
 }
 
 .portfolio{
-    background-color: darkgrey;
+    background-color:#faffff;
     padding: 350px 0;
     font-family: 'Poppins', sans-serif;
 
@@ -432,6 +432,9 @@
     align-items: center;
 }
 
+.parrafoytituloPortfolio p{
+    background-color: deepskyblue;
+}
 .proyectosPortfolio{
     display: flex;
     justify-content: center;
@@ -443,6 +446,26 @@
     font-size: 15px;
 
 }
+
+.imagenesPortfolio{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.imagenesPortfolio img{
+    width: 95%;
+    height: 430px;
+    border: solid black 1px;
+}
+
+
+.imagen1, .imagen2, .imagen3, .imagen4, .imagen5, .imagen6{
+    width: 500px;
+    height: 455px;
+}
+
 
 .piepagina{
     background-color: darksalmon;
