--- a/estilo.css
+++ b/estilo.css
@@ -468,6 +468,28 @@
 
 
 .footer{
-    background-color: darksalmon;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: deepskyblue;
     padding: 150px 0;
+    font-family:'Poppins', sans-serif;
+    justify-content: center;
+    
+}
+
+.primeraColumna, .segundaColumna{
+    width: 600px;
+    padding-left: 150px;
+}
+
+.datosFooter input{
+    border: 0;
+    border-bottom: solid rgb(3, 150, 199) 1px;
+    background-color: deepskyblue;
+    width: 90%;
+    padding-bottom: 30px;
+}
+
+.inputComoTePuedoAyudar input{
+padding-bottom: 80px;
 }
