finalize el form (falta agregar estilo al button)

--- a/estilo.css
+++ b/estilo.css
@@ -482,14 +482,19 @@
     padding-left: 150px;
 }
 
+.datosFooter{
+    margin-top: 40px;
+}
 .datosFooter input{
     border: 0;
     border-bottom: solid rgb(3, 150, 199) 1px;
     background-color: deepskyblue;
     width: 90%;
-    padding-bottom: 30px;
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 
 .inputComoTePuedoAyudar input{
-padding-bottom: 80px;
+    padding-bottom: 60px;
+
 }
