--- a/estilo.css
+++ b/estilo.css
@@ -482,9 +482,30 @@
     padding-left: 150px;
 }
 
+.tituloFooter{
+    font-size: 18px;
+}
+.parrafoFooter{
+    margin-top: 40px;
+    font-size: 20px;
+}
 .datosFooter{
     margin-top: 40px;
 }
+
+.datosPersonalesFooter{
+    margin-top: 50px;
+}
+
+.primerh3{
+    margin-bottom: 3px;
+}
+
+.segundoh3{
+    margin-top: 12px;
+    margin-bottom: 3px;
+}
+
 .datosFooter input{
     border: 0;
     border-bottom: solid rgb(3, 150, 199) 1px;
@@ -497,4 +518,40 @@
 .inputComoTePuedoAyudar input{
     padding-bottom: 60px;
 
+}
+
+label{
+    font-size: 20px;
+}
+
+.contenedorIconosFooter{
+    margin-top: 50px;
+}
+
+.contenedorIconosFooter i{
+    margin: 6px;
+    font-size: 20px;
+    color: #4D555A;
+}
+
+.buttonComoTePuedoAyudar button{
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    padding: 5px;
+    width: 135px;
+    background-color: black;
+    border: solid black 1px;
+}
+
+.botonYFlecha button, .i{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #faffff;
+    
+}
+
+.botonYFlecha i{
+    font-size: 27px;
+    margin-left: 8px;
 }
