--- a/estilo.css
+++ b/estilo.css
@@ -93,9 +93,11 @@
 }
 .aboutMe{
     background-color: #faffff;
-    padding: 60px 0;
+    padding: 100px 0;
+    font-family: 'Poppins', sans-serif;
     
 }
+
 
 .aboutMeTitulo{
     display: flex;
@@ -107,48 +109,59 @@
 .aboutMeTitulo p{
     background-color: deepskyblue;
     font-size: 16px;
-    font-family: 'Poppins', sans-serif;
+    
 }
 
 .aboutMeTitulo h1{
     font-size: 40px;
-    font-family: 'Poppins', sans-serif;
 }
 
 .textoAboutMe{
    font-size: 25px;
-  
-   
+  margin-left: 20px;
+}
+
+.textoAboutMe, .logoExperiencia{
+    width: 720px;
+    margin-top: 30px;
+    padding-left: 200px;
+    
+}
+.textoYLogo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .textoAboutMe h1{
     font-size: 40px;
     color: #212529;
-    font-family: 'Poppins', sans-serif;
 }
 .nombreAboutMe{
     font-size: 40px;
     color: #212529;
-    font-family: 'Roboto', sans-serif;
     text-decoration: underline deepskyblue;
 }
 
-.pAboutMe{
-    font-family: 'Barlow', sans-serif; 
+.pAboutMe{ 
+    font-size: 20px;
 }
 
 .logoExperiencia{
-  
-   
-    
+   padding-left: 30px;
+   margin-left: 70px;
 }
 
 .logoExperiencia img{
-    width: 180px;
-    margin-right: 68px;
+    width: 230px;
+    margin-left: 67px
+    
 }
 .logoExperiencia h1{
-    font-family: 'Times New Roman', Times, serif;
+    font-size: 30px;
+}
+.h1logoexp{
+    margin-left: 40px;
 }
 .DATOS{
     display: flex;
@@ -292,9 +305,9 @@
 .h1skills{
     display: flex;
     justify-content: center;
-    width: 700px;
+    width: 600px;
     text-align: center;
-    padding-left: 95px;
+    margin-left: 40px;
     padding-top: 70px; 
 }
 .skillPorcentaje{
